--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2394,14 +2394,11 @@ input[type="range"]::-ms-fill-lower {
 .mt-4 {
   margin-top: 1rem;
 }
+.ml-4 {
+  margin-left: 1rem;
+}
 .ml-2 {
   margin-left: 0.5rem;
-}
-.mt-0 {
-  margin-top: 0px;
-}
-.mb-6 {
-  margin-bottom: 1.5rem;
 }
 .mt-10 {
   margin-top: 2.5rem;
@@ -2430,6 +2427,12 @@ input[type="range"]::-ms-fill-lower {
 .mr-auto {
   margin-right: auto;
 }
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+.mt-0 {
+  margin-top: 0px;
+}
 .ml-1 {
   margin-left: 0.25rem;
 }
@@ -2447,9 +2450,6 @@ input[type="range"]::-ms-fill-lower {
 }
 .mr-6 {
   margin-right: 1.5rem;
-}
-.ml-4 {
-  margin-left: 1rem;
 }
 .ml-12 {
   margin-left: 3rem;
@@ -2540,9 +2540,6 @@ input[type="range"]::-ms-fill-lower {
 }
 .h-20 {
   height: 5rem;
-}
-.h-96 {
-  height: 24rem;
 }
 .max-h-24 {
   max-height: 6rem;
@@ -2798,11 +2795,6 @@ input[type="range"]::-ms-fill-lower {
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
-.space-x-6 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -2827,6 +2819,11 @@ input[type="range"]::-ms-fill-lower {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+.space-x-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .divide-x > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-x-reverse: 0;
@@ -2898,10 +2895,6 @@ input[type="range"]::-ms-fill-lower {
 .rounded-r-md {
   border-top-right-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
-}
-.rounded-t-lg {
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
 }
 .border {
   border-width: 1px;
@@ -3082,11 +3075,11 @@ input[type="range"]::-ms-fill-lower {
 .to-blue-500 {
   --tw-gradient-to: #3F83F8;
 }
-.bg-cover {
-  background-size: cover;
-}
 .bg-contain {
   background-size: contain;
+}
+.bg-cover {
+  background-size: cover;
 }
 .bg-fixed {
   background-attachment: fixed;
@@ -3110,10 +3103,6 @@ input[type="range"]::-ms-fill-lower {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
 }
 .object-scale-down {
   -o-object-fit: scale-down;
@@ -3173,10 +3162,6 @@ input[type="range"]::-ms-fill-lower {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -3196,6 +3181,10 @@ input[type="range"]::-ms-fill-lower {
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
+}
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 .py-3 {
   padding-top: 0.75rem;
@@ -3248,9 +3237,6 @@ input[type="range"]::-ms-fill-lower {
 .pt-6 {
   padding-top: 1.5rem;
 }
-.pt-24 {
-  padding-top: 6rem;
-}
 .pb-6 {
   padding-bottom: 1.5rem;
 }
@@ -3265,6 +3251,9 @@ input[type="range"]::-ms-fill-lower {
 }
 .pb-4 {
   padding-bottom: 1rem;
+}
+.pt-24 {
+  padding-top: 6rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -3342,10 +3331,6 @@ input[type="range"]::-ms-fill-lower {
   font-size: 0.75rem;
   line-height: 1rem;
 }
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -3361,6 +3346,10 @@ input[type="range"]::-ms-fill-lower {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 .font-medium {
   font-weight: 500;
@@ -3443,6 +3432,10 @@ input[type="range"]::-ms-fill-lower {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -3450,10 +3443,6 @@ input[type="range"]::-ms-fill-lower {
 .text-indigo-600 {
   --tw-text-opacity: 1;
   color: rgb(88 80 236 / var(--tw-text-opacity));
-}
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 .text-gray-900 {
   --tw-text-opacity: 1;
@@ -3514,6 +3503,14 @@ input[type="range"]::-ms-fill-lower {
 .decoration-yellow-600 {
   -webkit-text-decoration-color: #9F580A;
           text-decoration-color: #9F580A;
+}
+.decoration-blue-600 {
+  -webkit-text-decoration-color: #1C64F2;
+          text-decoration-color: #1C64F2;
+}
+.decoration-red-600 {
+  -webkit-text-decoration-color: #E02424;
+          text-decoration-color: #E02424;
 }
 .underline-offset-8 {
   text-underline-offset: 8px;
@@ -4210,10 +4207,6 @@ input[type="range"]::-ms-fill-lower {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
-.dark .dark\:hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
 .dark .dark\:hover\:text-indigo-100:hover {
   --tw-text-opacity: 1;
   color: rgb(229 237 255 / var(--tw-text-opacity));
@@ -4476,16 +4469,16 @@ input[type="range"]::-ms-fill-lower {
     margin-top: 1.25rem;
   }
 
-  .md\:mt-0 {
-    margin-top: 0px;
-  }
-
   .md\:mt-8 {
     margin-top: 2rem;
   }
 
   .md\:mr-6 {
     margin-right: 1.5rem;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0px;
   }
 
   .md\:block {
@@ -4510,10 +4503,6 @@ input[type="range"]::-ms-fill-lower {
 
   .md\:h-20 {
     height: 5rem;
-  }
-
-  .md\:h-auto {
-    height: auto;
   }
 
   .md\:w-full {
@@ -4542,10 +4531,6 @@ input[type="range"]::-ms-fill-lower {
 
   .md\:w-20 {
     width: 5rem;
-  }
-
-  .md\:w-48 {
-    width: 12rem;
   }
 
   .md\:grid-cols-2 {
@@ -4592,22 +4577,8 @@ input[type="range"]::-ms-fill-lower {
     margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .md\:rounded-none {
-    border-radius: 0px;
-  }
-
-  .md\:rounded-l-lg {
-    border-top-left-radius: 0.5rem;
-    border-bottom-left-radius: 0.5rem;
-  }
-
   .md\:p-8 {
     padding: 2rem;
-  }
-
-  .md\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
   }
 
   .md\:py-12 {
@@ -4618,6 +4589,11 @@ input[type="range"]::-ms-fill-lower {
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .md\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
   .md\:py-0 {
@@ -4936,22 +4912,6 @@ input[type="range"]::-ms-fill-lower {
 
   .xl\:aspect-h-8 {
     --tw-aspect-h: 8;
-  }
-
-  .xl\:aspect-w-2 {
-    position: relative;
-    padding-bottom: calc(var(--tw-aspect-h) / var(--tw-aspect-w) * 100%);
-    --tw-aspect-w: 2;
-  }
-
-  .xl\:aspect-w-2 > * {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
   }
 }
 @media (min-width: 1536px) {
