--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2027,6 +2027,15 @@ input[type="range"]::-ms-fill-lower{
 .-mr-2{
   margin-right: -0.5rem;
 }
+.mb-40{
+  margin-bottom: 10rem;
+}
+.mt-12{
+  margin-top: 3rem;
+}
+.mb-12{
+  margin-bottom: 3rem;
+}
 .block{
   display: block;
 }
@@ -2107,6 +2116,9 @@ input[type="range"]::-ms-fill-lower{
 }
 .h-1{
   height: 0.25rem;
+}
+.h-64{
+  height: 16rem;
 }
 .max-h-24{
   max-height: 6rem;
@@ -2336,6 +2348,9 @@ input[type="range"]::-ms-fill-lower{
 .gap-8{
   gap: 2rem;
 }
+.gap-12{
+  gap: 3rem;
+}
 .gap-y-10{
   row-gap: 2.5rem;
 }
@@ -2385,6 +2400,11 @@ input[type="range"]::-ms-fill-lower{
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+.divide-x-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(4px * var(--tw-divide-x-reverse));
+  border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
 }
 .divide-x > :not([hidden]) ~ :not([hidden]){
   --tw-divide-x-reverse: 0;
@@ -2787,6 +2807,10 @@ input[type="range"]::-ms-fill-lower{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
+.px-64{
+  padding-left: 16rem;
+  padding-right: 16rem;
+}
 .pt-6{
   padding-top: 1.5rem;
 }
@@ -2856,6 +2880,9 @@ input[type="range"]::-ms-fill-lower{
 .text-center{
   text-align: center;
 }
+.text-right{
+  text-align: right;
+}
 .text-justify{
   text-align: justify;
 }
@@ -2905,6 +2932,10 @@ input[type="range"]::-ms-fill-lower{
 }
 .text-5xl{
   font-size: 3rem;
+  line-height: 1;
+}
+.text-8xl{
+  font-size: 6rem;
   line-height: 1;
 }
 .font-medium{
@@ -2960,6 +2991,9 @@ input[type="range"]::-ms-fill-lower{
 }
 .leading-4{
   line-height: 1rem;
+}
+.leading-snug{
+  line-height: 1.375;
 }
 .tracking-widest{
   letter-spacing: 0.1em;
@@ -3372,6 +3406,10 @@ input[type="range"]::-ms-fill-lower{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
+.focus\:bg-gray-300:focus{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
 .focus\:text-indigo-700:focus{
   --tw-text-opacity: 1;
   color: rgb(81 69 205 / var(--tw-text-opacity));
@@ -3486,6 +3524,10 @@ input[type="range"]::-ms-fill-lower{
 .active\:bg-gray-900:active{
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+.active\:bg-gray-400:active{
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 .active\:text-gray-700:active{
   --tw-text-opacity: 1;
@@ -4084,6 +4126,11 @@ input[type="range"]::-ms-fill-lower{
     margin-right: 0px;
   }
 
+  .lg\:mx-auto{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .lg\:mt-20{
     margin-top: 5rem;
   }
@@ -4094,6 +4141,10 @@ input[type="range"]::-ms-fill-lower{
 
   .lg\:mt-0{
     margin-top: 0px;
+  }
+
+  .lg\:mb-0{
+    margin-bottom: 0px;
   }
 
   .lg\:block{
@@ -4112,6 +4163,10 @@ input[type="range"]::-ms-fill-lower{
     height: 100%;
   }
 
+  .lg\:h-56{
+    height: 14rem;
+  }
+
   .lg\:w-full{
     width: 100%;
   }
@@ -4122,6 +4177,10 @@ input[type="range"]::-ms-fill-lower{
 
   .lg\:w-6\/12{
     width: 50%;
+  }
+
+  .lg\:w-56{
+    width: 14rem;
   }
 
   .lg\:max-w-full{
@@ -4146,6 +4205,10 @@ input[type="range"]::-ms-fill-lower{
 
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:gap-8{
@@ -4242,6 +4305,21 @@ input[type="range"]::-ms-fill-lower{
     padding-bottom: 0px;
   }
 
+  .xl\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+
+  .xl\:px-24{
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
+  .xl\:px-64{
+    padding-left: 16rem;
+    padding-right: 16rem;
+  }
+
   .xl\:pb-32{
     padding-bottom: 8rem;
   }
@@ -4254,6 +4332,36 @@ input[type="range"]::-ms-fill-lower{
   .xl\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .xl\:text-7xl{
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .xl\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .xl\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .xl\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .xl\:text-8xl{
+    font-size: 6rem;
+    line-height: 1;
+  }
+
+  .xl\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .xl\:aspect-w-7{
