--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1891,11 +1891,11 @@ input[type="range"]::-ms-fill-lower{
 .z-0{
   z-index: 0;
 }
-.z-10{
-  z-index: 10;
-}
 .z-50{
   z-index: 50;
+}
+.z-10{
+  z-index: 10;
 }
 .z-20{
   z-index: 20;
@@ -1961,8 +1961,11 @@ input[type="range"]::-ms-fill-lower{
 .mt-2{
   margin-top: 0.5rem;
 }
-.mt-10{
-  margin-top: 2.5rem;
+.mb-12{
+  margin-bottom: 3rem;
+}
+.mt-12{
+  margin-top: 3rem;
 }
 .mt-3{
   margin-top: 0.75rem;
@@ -2015,6 +2018,9 @@ input[type="range"]::-ms-fill-lower{
 .mt-0{
   margin-top: 0px;
 }
+.mt-10{
+  margin-top: 2.5rem;
+}
 .ml-6{
   margin-left: 1.5rem;
 }
@@ -2024,17 +2030,11 @@ input[type="range"]::-ms-fill-lower{
 .mb-8{
   margin-bottom: 2rem;
 }
-.-mr-2{
-  margin-right: -0.5rem;
-}
 .mb-40{
   margin-bottom: 10rem;
 }
-.mt-12{
-  margin-top: 3rem;
-}
-.mb-12{
-  margin-bottom: 3rem;
+.-mr-2{
+  margin-right: -0.5rem;
 }
 .block{
   display: block;
@@ -2066,9 +2066,6 @@ input[type="range"]::-ms-fill-lower{
 .h-56{
   height: 14rem;
 }
-.h-6{
-  height: 1.5rem;
-}
 .h-24{
   height: 6rem;
 }
@@ -2096,6 +2093,9 @@ input[type="range"]::-ms-fill-lower{
 .h-8{
   height: 2rem;
 }
+.h-6{
+  height: 1.5rem;
+}
 .h-16{
   height: 4rem;
 }
@@ -2116,6 +2116,9 @@ input[type="range"]::-ms-fill-lower{
 }
 .h-1{
   height: 0.25rem;
+}
+.h-96{
+  height: 24rem;
 }
 .h-64{
   height: 16rem;
@@ -2212,6 +2215,9 @@ input[type="range"]::-ms-fill-lower{
 }
 .max-w-sm{
   max-width: 24rem;
+}
+.max-w-3xl{
+  max-width: 48rem;
 }
 .flex-1{
   flex: 1 1 0%;
@@ -2315,6 +2321,12 @@ input[type="range"]::-ms-fill-lower{
 .flex-wrap{
   flex-wrap: wrap;
 }
+.place-content-center{
+  place-content: center;
+}
+.place-items-center{
+  place-items: center;
+}
 .content-center{
   align-content: center;
 }
@@ -2339,6 +2351,9 @@ input[type="range"]::-ms-fill-lower{
 .justify-items-stretch{
   justify-items: stretch;
 }
+.gap-12{
+  gap: 3rem;
+}
 .gap-4{
   gap: 1rem;
 }
@@ -2347,9 +2362,6 @@ input[type="range"]::-ms-fill-lower{
 }
 .gap-8{
   gap: 2rem;
-}
-.gap-12{
-  gap: 3rem;
 }
 .gap-y-10{
   row-gap: 2.5rem;
@@ -2400,11 +2412,6 @@ input[type="range"]::-ms-fill-lower{
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
-}
-.divide-x-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(4px * var(--tw-divide-x-reverse));
-  border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
 }
 .divide-x > :not([hidden]) ~ :not([hidden]){
   --tw-divide-x-reverse: 0;
@@ -2612,6 +2619,10 @@ input[type="range"]::-ms-fill-lower{
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
+.bg-gray-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
 .bg-gradient-to-r{
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -2696,6 +2707,9 @@ input[type="range"]::-ms-fill-lower{
 .p-6{
   padding: 1.5rem;
 }
+.p-8{
+  padding: 2rem;
+}
 .p-0\.5{
   padding: 0.125rem;
 }
@@ -2707,9 +2721,6 @@ input[type="range"]::-ms-fill-lower{
 }
 .p-2{
   padding: 0.5rem;
-}
-.p-8{
-  padding: 2rem;
 }
 .p-1{
   padding: 0.25rem;
@@ -2807,18 +2818,11 @@ input[type="range"]::-ms-fill-lower{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
-.px-64{
-  padding-left: 16rem;
-  padding-right: 16rem;
-}
 .pt-6{
   padding-top: 1.5rem;
 }
 .pb-6{
   padding-bottom: 1.5rem;
-}
-.pb-8{
-  padding-bottom: 2rem;
 }
 .pt-12{
   padding-top: 3rem;
@@ -2868,6 +2872,9 @@ input[type="range"]::-ms-fill-lower{
 .pb-0{
   padding-bottom: 0px;
 }
+.pb-8{
+  padding-bottom: 2rem;
+}
 .pt-24{
   padding-top: 6rem;
 }
@@ -2879,9 +2886,6 @@ input[type="range"]::-ms-fill-lower{
 }
 .text-center{
   text-align: center;
-}
-.text-right{
-  text-align: right;
 }
 .text-justify{
   text-align: justify;
@@ -2906,13 +2910,17 @@ input[type="range"]::-ms-fill-lower{
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
+}
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .text-lg{
   font-size: 1.125rem;
@@ -2929,14 +2937,6 @@ input[type="range"]::-ms-fill-lower{
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
-}
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
-}
-.text-8xl{
-  font-size: 6rem;
-  line-height: 1;
 }
 .font-medium{
   font-weight: 500;
@@ -2992,9 +2992,6 @@ input[type="range"]::-ms-fill-lower{
 .leading-4{
   line-height: 1rem;
 }
-.leading-snug{
-  line-height: 1.375;
-}
 .tracking-widest{
   letter-spacing: 0.1em;
 }
@@ -3021,13 +3018,13 @@ input[type="range"]::-ms-fill-lower{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
-.text-gray-900{
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
 .text-gray-400{
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+.text-gray-900{
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 .text-white{
   --tw-text-opacity: 1;
@@ -3406,10 +3403,6 @@ input[type="range"]::-ms-fill-lower{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
-.focus\:bg-gray-300:focus{
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
 .focus\:text-indigo-700:focus{
   --tw-text-opacity: 1;
   color: rgb(81 69 205 / var(--tw-text-opacity));
@@ -3524,10 +3517,6 @@ input[type="range"]::-ms-fill-lower{
 .active\:bg-gray-900:active{
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-.active\:bg-gray-400:active{
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 .active\:text-gray-700:active{
   --tw-text-opacity: 1;
@@ -3765,10 +3754,6 @@ input[type="range"]::-ms-fill-lower{
     margin-bottom: -1px;
   }
 
-  .sm\:mt-12{
-    margin-top: 3rem;
-  }
-
   .sm\:mt-5{
     margin-top: 1.25rem;
   }
@@ -3779,6 +3764,10 @@ input[type="range"]::-ms-fill-lower{
 
   .sm\:ml-6{
     margin-left: 1.5rem;
+  }
+
+  .sm\:mt-12{
+    margin-top: 3rem;
   }
 
   .sm\:ml-10{
@@ -3885,14 +3874,14 @@ input[type="range"]::-ms-fill-lower{
     text-align: center;
   }
 
-  .sm\:text-5xl{
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .sm\:text-lg{
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .sm\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .sm\:duration-500{
@@ -3955,10 +3944,6 @@ input[type="range"]::-ms-fill-lower{
     margin-bottom: 2.5rem;
   }
 
-  .md\:mt-16{
-    margin-top: 4rem;
-  }
-
   .md\:mt-5{
     margin-top: 1.25rem;
   }
@@ -3969,6 +3954,10 @@ input[type="range"]::-ms-fill-lower{
 
   .md\:mr-6{
     margin-right: 1.5rem;
+  }
+
+  .md\:mt-16{
+    margin-top: 4rem;
   }
 
   .md\:block{
@@ -4065,12 +4054,12 @@ input[type="range"]::-ms-fill-lower{
     padding-bottom: 2.5rem;
   }
 
-  .md\:pb-20{
-    padding-bottom: 5rem;
-  }
-
   .md\:pb-0{
     padding-bottom: 0px;
+  }
+
+  .md\:pb-20{
+    padding-bottom: 5rem;
   }
 
   .md\:text-6xl{
@@ -4126,25 +4115,20 @@ input[type="range"]::-ms-fill-lower{
     margin-right: 0px;
   }
 
-  .lg\:mx-auto{
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .lg\:mt-20{
-    margin-top: 5rem;
-  }
-
-  .lg\:mb-8{
-    margin-bottom: 2rem;
-  }
-
   .lg\:mt-0{
     margin-top: 0px;
   }
 
   .lg\:mb-0{
     margin-bottom: 0px;
+  }
+
+  .lg\:mb-8{
+    margin-bottom: 2rem;
+  }
+
+  .lg\:mt-20{
+    margin-top: 5rem;
   }
 
   .lg\:block{
@@ -4159,12 +4143,12 @@ input[type="range"]::-ms-fill-lower{
     display: none;
   }
 
-  .lg\:h-full{
-    height: 100%;
-  }
-
   .lg\:h-56{
     height: 14rem;
+  }
+
+  .lg\:h-full{
+    height: 100%;
   }
 
   .lg\:w-full{
@@ -4179,16 +4163,16 @@ input[type="range"]::-ms-fill-lower{
     width: 50%;
   }
 
-  .lg\:w-56{
-    width: 14rem;
+  .lg\:max-w-7xl{
+    max-width: 80rem;
   }
 
   .lg\:max-w-full{
     max-width: 100%;
   }
 
-  .lg\:max-w-7xl{
-    max-width: 80rem;
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-5{
@@ -4205,10 +4189,6 @@ input[type="range"]::-ms-fill-lower{
 
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:gap-8{
@@ -4263,12 +4243,12 @@ input[type="range"]::-ms-fill-lower{
 }
 @media (min-width: 1280px){
 
-  .xl\:mt-28{
-    margin-top: 7rem;
-  }
-
   .xl\:mr-16{
     margin-right: 4rem;
+  }
+
+  .xl\:mt-28{
+    margin-top: 7rem;
   }
 
   .xl\:block{
@@ -4300,28 +4280,23 @@ input[type="range"]::-ms-fill-lower{
          column-gap: 2rem;
   }
 
-  .xl\:py-0{
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-
   .xl\:px-32{
     padding-left: 8rem;
     padding-right: 8rem;
   }
 
-  .xl\:px-24{
-    padding-left: 6rem;
-    padding-right: 6rem;
-  }
-
-  .xl\:px-64{
-    padding-left: 16rem;
-    padding-right: 16rem;
+  .xl\:py-0{
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   .xl\:pb-32{
     padding-bottom: 8rem;
+  }
+
+  .xl\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .xl\:text-6xl{
@@ -4332,36 +4307,6 @@ input[type="range"]::-ms-fill-lower{
   .xl\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
-  }
-
-  .xl\:text-7xl{
-    font-size: 4.5rem;
-    line-height: 1;
-  }
-
-  .xl\:text-3xl{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .xl\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .xl\:text-5xl{
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .xl\:text-8xl{
-    font-size: 6rem;
-    line-height: 1;
-  }
-
-  .xl\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 
   .xl\:aspect-w-7{
